--- a/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
@@ -78,6 +78,7 @@
             <sbb-checkbox formControlName="showSmallButtons">Small map controls</sbb-checkbox>
             <sbb-checkbox formControlName="basemapSwitch">Basemap Switch</sbb-checkbox>
             <sbb-checkbox formControlName="levelSwitch">Level Switcher</sbb-checkbox>
+            <sbb-checkbox formControlName="homeButton">Home Button</sbb-checkbox>
             <sbb-checkbox formControlName="geoLocation">Show GeoLocation</sbb-checkbox>
           </ng-container>
           <sbb-checkbox formControlName="limitMaxBounds"> Limit max bounds to CH</sbb-checkbox>
