feat(angular/select): implement dark mode

--- a/src/angular/select/select.html
+++ b/src/angular/select/select.html
@@ -20,7 +20,7 @@
     svgIcon="chevron-small-down-small"
   ></sbb-icon>
   <sbb-icon
-    *ngSwitchCase="'lean'"
+    *ngSwitchDefault
     class="sbb-icon-scaled sbb-select-arrow-icon sbb-select-arrow-icon-lean"
     svgIcon="chevron-right-small"
   ></sbb-icon>
