fix(journey-maps): apply suggestion
Co-authored-by: Mario Härtwig <mario.haertwig@sbb.ch>

--- a/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
@@ -20,7 +20,7 @@
     [journeyMapsZones]="form.get('zoneGeoJson')?.value"
     [poiOptions]="form.get('pointsOfInterestOptions')?.value"
     [(selectedMarkerId)]="selectedMarkerId"
-    [selectedLevel]="this.form.get('level')?.value ?? undefined"
+    [selectedLevel]="this.form.get('level')?.value"
     (selectedLevelChange)="this.changeSelectedLevel($event)"
     (mapCenterChange)="mapCenterChange.next($event)"
     (mapBoundsChange)="mapBoundingBoxChange.next($event)"
