--- a/src/angular/checkbox/checkbox.html
+++ b/src/angular/checkbox/checkbox.html
@@ -14,6 +14,7 @@
     [attr.aria-label]="ariaLabel || null"
     [attr.aria-labelledby]="ariaLabelledby"
     [attr.aria-describedby]="ariaDescribedby"
+    [attr.aria-checked]="indeterminate ? 'mixed' : null"
     (change)="_onInteractionEvent($event)"
     (click)="_onInputClick($event)"
   />
