feat(multiple): implement dark mode (#1983)
BREAKING CHANGE: This adds the dark mode for the lean design variant. The mode chosen is based on the system settings. To enforce a specific mode, you can add the sbb-light or sbb-dark class to the <html> element.

---------

Co-authored-by: Jeremias Peier <jeremias.peier@sbb.ch>
Co-authored-by: n1thushan <144450068+n1thushan@users.noreply.github.com>
Co-authored-by: antoniafurrer <143700401+antoniafurrer@users.noreply.github.com>
Co-authored-by: matthiaswattingersbb <143601855+matthiaswattingersbb@users.noreply.github.com>

--- a/src/angular/accordion/expansion-panel-header.html
+++ b/src/angular/accordion/expansion-panel-header.html
@@ -6,13 +6,13 @@
   [ngSwitch]="panel.variant | async"
   *ngIf="_showToggle()"
 >
-  <sbb-icon
-    *ngSwitchCase="'lean'"
-    [@indicatorRotate]="_getExpandedState()"
-    svgIcon="chevron-right-small"
-  ></sbb-icon>
   <ng-container *ngSwitchCase="'standard'" [ngSwitch]="_isExpanded()">
     <sbb-icon *ngSwitchCase="false" svgIcon="plus-small"></sbb-icon>
     <sbb-icon *ngSwitchCase="true" svgIcon="minus-small"></sbb-icon>
   </ng-container>
+  <sbb-icon
+    *ngSwitchDefault
+    [@indicatorRotate]="_getExpandedState()"
+    svgIcon="chevron-right-small"
+  ></sbb-icon>
 </span>
