feat(journey-maps): new POIs category p2p_car_sharing
Refs: ROKAS-1672, apply comments

--- a/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
+++ b/src/components-examples/journey-maps/angular/journey-maps-full/journey-maps-full-example.html
@@ -208,7 +208,7 @@
         <sbb-form-field label="POI Subcategories">
           <sbb-select multiple formControlName="categories">
             <sbb-option
-              *ngFor="let category of ['park_rail', 'car_sharing', 'bike_parking', 'bike_sharing', 'on_demand', 'p2p_car_sharing']"
+              *ngFor="let category of ['park_rail', 'car_sharing', 'p2p_car_sharing', 'bike_parking', 'bike_sharing', 'on_demand']"
               [value]="category"
               >{{category}}</sbb-option
             >
