feat(perf): use build-in control-flow for components using migration

--- a/src/angular/button/button.html
+++ b/src/angular/button/button.html
@@ -1,11 +1,7 @@
-<sbb-icon
-  *ngIf="(_leftIconVisible | async) && svgIcon"
-  class="sbb-button-indicator-icon sbb-button-left-icon"
-  [svgIcon]="svgIcon"
-></sbb-icon>
+@if ((_leftIconVisible | async) && svgIcon) {
+<sbb-icon class="sbb-button-indicator-icon sbb-button-left-icon" [svgIcon]="svgIcon"></sbb-icon>
+}
 <ng-content></ng-content>
-<sbb-icon
-  *ngIf="(_rightIconVisible | async) && svgIcon"
-  class="sbb-button-indicator-icon sbb-button-right-icon"
-  [svgIcon]="svgIcon"
-></sbb-icon>
+@if ((_rightIconVisible | async) && svgIcon) {
+<sbb-icon class="sbb-button-indicator-icon sbb-button-right-icon" [svgIcon]="svgIcon"></sbb-icon>
+}
