--- a/src/angular/search/header-search.html
+++ b/src/angular/search/header-search.html
@@ -1,8 +1,5 @@
 <sbb-icon [svgIcon]="svgIcon" class="sbb-icon-scaled"></sbb-icon>
-<span class="sbb-header-search-label">
-  <ng-container *ngIf="!label">{{ _labelSearch }}</ng-container>
-  {{ label }}
-</span>
+<span class="sbb-header-search-label"> @if (!label) { {{ _labelSearch }} } {{ label }} </span>
 
 <ng-template
   cdk-connected-overlay
