--- a/src/angular/sidebar/icon-sidebar/icon-sidebar.html
+++ b/src/angular/sidebar/icon-sidebar/icon-sidebar.html
@@ -3,8 +3,8 @@
     <ng-content select="a[sbbIconSidebarItem], hr"></ng-content>
   </div>
 
+  @if (!_container._mobile) {
   <button
-    *ngIf="!_container._mobile"
     class="sbb-icon-sidebar-item sbb-button-reset-frameless sbb-icon-sidebar-collapse-expand-button"
     (click)="toggleExpanded()"
     type="button"
@@ -15,9 +15,9 @@
     <span [attr.aria-hidden]="!expanded" class="sbb-icon-sidebar-item-label"
       >{{ _labelCollapse }}</span
     >
-
     <span [attr.aria-hidden]="expanded" class="sbb-icon-sidebar-item-label cdk-visually-hidden"
       >{{ _labelExpand }}</span
     >
   </button>
+  }
 </div>
