--- a/src/angular/usermenu/usermenu.html
+++ b/src/angular/usermenu/usermenu.html
@@ -1,5 +1,5 @@
+@if (!_loggedIn) {
 <button
-  *ngIf="!_loggedIn"
   class="sbb-button-reset-frameless sbb-usermenu-trigger sbb-usermenu-trigger-logged-out"
   (click)="_emitLogin()"
   type="button"
@@ -7,9 +7,8 @@
   <sbb-icon svgIcon="user-small" class="sbb-usermenu-logged-out-icon"></sbb-icon>
   <span class="sbb-usermenu-logged-out-label">{{ _labelLogin }}</span>
 </button>
-
+} @if (_loggedIn && menu) {
 <button
-  *ngIf="_loggedIn && menu"
   [sbbMenuTriggerFor]="menu"
   (menuOpened)="_emitMenuOpened()"
   (menuClosed)="_emitMenuClosed()"
@@ -25,25 +24,27 @@
     ></sbb-icon>
   </ng-template>
 </button>
-
-<div *ngIf="_loggedIn && !menu" class="sbb-usermenu-trigger sbb-usermenu-trigger-logged-in">
+} @if (_loggedIn && !menu) {
+<div class="sbb-usermenu-trigger sbb-usermenu-trigger-logged-in">
   <ng-template sbbMenuDynamicTrigger>
     <ng-container *ngTemplateOutlet="triggerContent"></ng-container>
   </ng-template>
 </div>
+}
 
 <ng-template #triggerContent>
   <span class="sbb-usermenu-identification" aria-hidden="true">
-    <ng-container *ngIf="_icon">
-      <ng-container *ngTemplateOutlet="_icon"></ng-container>
-    </ng-container>
-    <span *ngIf="!_icon" class="sbb-usermenu-initial-letters"> {{ _initialLetters }} </span>
+    @if (_icon) {
+    <ng-container *ngTemplateOutlet="_icon"></ng-container>
+    } @if (!_icon) {
+    <span class="sbb-usermenu-initial-letters"> {{ _initialLetters }} </span>
+    }
   </span>
 
   <span class="sbb-usermenu-user-info">
     <span class="sbb-usermenu-user-info-display-name"> {{ displayName || userName }} </span>
-    <span class="sbb-usermenu-user-info-name" *ngIf="displayName && userName">
-      {{ userName }}
-    </span>
+    @if (displayName && userName) {
+    <span class="sbb-usermenu-user-info-name"> {{ userName }} </span>
+    }
   </span>
 </ng-template>
