--- a/src/angular/accordion/expansion-panel-header.html
+++ b/src/angular/accordion/expansion-panel-header.html
@@ -1,18 +1,14 @@
 <span class="sbb-expansion-panel-header-content">
   <ng-content></ng-content>
 </span>
-<span
-  class="sbb-expansion-panel-header-indicator sbb-icon-fit"
-  [ngSwitch]="panel.variant | async"
-  *ngIf="_showToggle()"
->
-  <ng-container *ngSwitchCase="'standard'" [ngSwitch]="_isExpanded()">
-    <sbb-icon *ngSwitchCase="false" svgIcon="plus-small"></sbb-icon>
-    <sbb-icon *ngSwitchCase="true" svgIcon="minus-small"></sbb-icon>
-  </ng-container>
-  <sbb-icon
-    *ngSwitchDefault
-    [@indicatorRotate]="_getExpandedState()"
-    svgIcon="chevron-right-small"
-  ></sbb-icon>
+@if (_showToggle()) {
+<span class="sbb-expansion-panel-header-indicator sbb-icon-fit">
+  @switch (panel.variant | async) { @case ('standard') { @switch (_isExpanded()) { @case (false) {
+  <sbb-icon svgIcon="plus-small"></sbb-icon>
+  } @case (true) {
+  <sbb-icon svgIcon="minus-small"></sbb-icon>
+  } } } @default {
+  <sbb-icon [@indicatorRotate]="_getExpandedState()" svgIcon="chevron-right-small"></sbb-icon>
+  } }
 </span>
+}
