--- a/src/angular/alert/alert.html
+++ b/src/angular/alert/alert.html
@@ -3,11 +3,12 @@
 </div>
 <div class="sbb-alert-content">
   <ng-content></ng-content>
+  @if (_isNativeLink) {
   <sbb-icon
-    *ngIf="_isNativeLink"
     svgIcon="arrow-long-right-small"
     class="sbb-alert-content-link-icon sbb-icon-scaled"
   ></sbb-icon>
+  }
 </div>
 <div class="sbb-alert-close">
   <button
