--- a/src/angular/core/option/option.html
+++ b/src/angular/core/option/option.html
@@ -1,9 +1,12 @@
+@if (multiple) {
 <sbb-pseudo-checkbox
-  *ngIf="multiple"
   [disabled]="disabled"
   [state]="selected ? 'checked' : 'unchecked'"
 ></sbb-pseudo-checkbox>
+}
 <ng-content></ng-content>
 
 <!-- See a11y notes inside optgroup.ts for context behind this element. -->
-<span class="cdk-visually-hidden" *ngIf="group && group._inert">({{ group.label }})</span>
+@if (group && group._inert) {
+<span class="cdk-visually-hidden">({{ group.label }})</span>
+}
