--- a/src/angular/datepicker/calendar-body/calendar-body.html
+++ b/src/angular/datepicker/calendar-body/calendar-body.html
@@ -1,38 +1,39 @@
 <!-- Create the first row separately so we can include a special spacer cell. -->
-<tr *ngFor="let row of rows; let rowIndex = index" role="row">
-  <td *ngIf="weeksInMonth.length" role="gridcell" [style.width.%]="100 / (numCols + 1)">
-    <ng-container [ngSwitch]="isWeekSelectable">
-      <button
-        *ngSwitchCase="true"
-        type="button"
-        class="sbb-calendar-body-cell sbb-button-reset-frameless sbb-calendar-body-week"
-        (click)="onWeekClicked(weeksInMonth[rowIndex])"
-      >
-        <span class="sbb-calendar-body-cell-content">{{ weeksInMonth[rowIndex] }}</span>
-      </button>
-      <div *ngSwitchCase="false" class="sbb-calendar-body-cell sbb-calendar-body-week">
-        <span class="sbb-calendar-body-cell-content">{{ weeksInMonth[rowIndex] }}</span>
-      </div>
-    </ng-container>
+@for (row of rows; track row; let rowIndex = $index) {
+<tr role="row">
+  @if (weeksInMonth.length) {
+  <td role="gridcell" [style.width.%]="100 / (numCols + 1)">
+    @switch (isWeekSelectable) { @case (true) {
+    <button
+      type="button"
+      class="sbb-calendar-body-cell sbb-button-reset-frameless sbb-calendar-body-week"
+      (click)="onWeekClicked(weeksInMonth[rowIndex])"
+    >
+      <span class="sbb-calendar-body-cell-content">{{ weeksInMonth[rowIndex] }}</span>
+    </button>
+    } @case (false) {
+    <div class="sbb-calendar-body-cell sbb-calendar-body-week">
+      <span class="sbb-calendar-body-cell-content">{{ weeksInMonth[rowIndex] }}</span>
+    </div>
+    } }
   </td>
+  }
   <!--
     This cell is purely decorative, but we can't put `aria-hidden` or `role="presentation"` on it,
     because it throws off the week days for the rest of the row on NVDA. The aspect ratio of the
     table cells is maintained by setting the top and bottom padding as a percentage of the width
     (a variant of the trick described here: https://www.w3schools.com/howto/howto_css_aspect_ratio.asp).
-  -->
-  <td
-    *ngIf="rowIndex === 0 && firstRowOffset"
-    class="sbb-calendar-body-label"
-    [attr.colspan]="firstRowOffset"
-  ></td>
+    -->
+  @if (rowIndex === 0 && firstRowOffset) {
+  <td class="sbb-calendar-body-label" [attr.colspan]="firstRowOffset"></td>
+  }
   <!--
     Each gridcell in the calendar contains a button, which signals to assistive technology that the
     cell is interactable, as well as the selection state via `aria-pressed`. See angular/components#23476 for
     background.
-  -->
+    -->
+  @for (item of row; track item; let colIndex = $index) {
   <td
-    *ngFor="let item of row; let colIndex = index"
     role="gridcell"
     class="sbb-calendar-body-cell-container"
     [class.sbb-first-cell]="colIndex === 0"
@@ -63,4 +64,6 @@
       <span class="sbb-calendar-body-cell-content">{{ item.displayValue }}</span>
     </button>
   </td>
+  }
 </tr>
+}
