--- a/src/angular/datepicker/datepicker/datepicker.html
+++ b/src/angular/datepicker/datepicker/datepicker.html
@@ -1,5 +1,5 @@
+@if (prevDayActive) {
 <button
-  *ngIf="prevDayActive"
   type="button"
   class="sbb-datepicker-arrow-button sbb-datepicker-arrow-button-left sbb-icon-scaled"
   [attr.aria-label]="prevDayAriaLabel"
@@ -8,10 +8,12 @@
 >
   <sbb-icon svgIcon="chevron-small-left-small"></sbb-icon>
 </button>
-<sbb-datepicker-toggle *ngIf="toggleVisible"></sbb-datepicker-toggle>
+} @if (toggleVisible) {
+<sbb-datepicker-toggle></sbb-datepicker-toggle>
+}
 <ng-content></ng-content>
+@if (nextDayActive) {
 <button
-  *ngIf="nextDayActive"
   type="button"
   class="sbb-datepicker-arrow-button sbb-datepicker-arrow-button-right sbb-icon-scaled"
   [attr.aria-label]="nextDayAriaLabel"
@@ -20,3 +22,4 @@
 >
   <sbb-icon svgIcon="chevron-small-right-small"></sbb-icon>
 </button>
+}
