--- a/src/angular/header-lean/header.html
+++ b/src/angular/header-lean/header.html
@@ -15,14 +15,15 @@
 
 <div class="sbb-header-lean-titlebox">
   <span class="sbb-header-lean-label">{{ label }}</span>
-  <span *ngIf="subtitle" class="sbb-header-lean-subtitle">{{ subtitle }}</span>
+  @if (subtitle) {
+  <span class="sbb-header-lean-subtitle">{{ subtitle }}</span>
+  }
 </div>
 
 <nav class="sbb-header-lean-main-menu">
-  <ng-template
-    *ngIf="!(_headerMenusCollapsed | async)"
-    [cdkPortalOutlet]="menuActions"
-  ></ng-template>
+  @if (!(_headerMenusCollapsed | async)) {
+  <ng-template [cdkPortalOutlet]="menuActions"></ng-template>
+  }
 </nav>
 
 <div class="sbb-header-lean-container-end">
@@ -39,7 +40,8 @@
   <div #iconContent class="sbb-header-lean-logo" [hidden]="!iconContent.childElementCount">
     <ng-content select="[brand],.brand"></ng-content>
   </div>
-  <div *ngIf="!iconContent.childElementCount" class="sbb-header-lean-logo">
+  @if (!iconContent.childElementCount) {
+  <div class="sbb-header-lean-logo">
     <svg class="sbb-header-lean-sbb-logo" viewBox="0 0 80 21" xmlns="http://www.w3.org/2000/svg">
       <path d="M0 0h59.233v20.603H0V0z" fill="#EC0000"></path>
       <path
@@ -48,6 +50,7 @@
       ></path>
     </svg>
   </div>
+  }
 </div>
 
 <div class="sbb-header-lean-side-menu-backdrop" (click)="_onBackdropClicked()"></div>
@@ -71,15 +74,16 @@
 
     <div class="sbb-header-lean-titlebox">
       <span class="sbb-header-lean-label">{{ label }}</span>
-      <span *ngIf="subtitle" class="sbb-header-lean-subtitle">{{ subtitle }}</span>
+      @if (subtitle) {
+      <span class="sbb-header-lean-subtitle">{{ subtitle }}</span>
+      }
     </div>
   </div>
 
   <nav class="sbb-header-lean-side-menu">
-    <ng-template
-      *ngIf="_headerMenusCollapsed | async"
-      [cdkPortalOutlet]="menuActions"
-    ></ng-template>
+    @if (_headerMenusCollapsed | async) {
+    <ng-template [cdkPortalOutlet]="menuActions"></ng-template>
+    }
   </nav>
 
   <ng-content select="sbb-app-chooser-section"></ng-content>
@@ -87,8 +91,8 @@
 <ng-content select="sbb-header-menu"></ng-content>
 
 <!--
-  The outlet for links and buttons inside sbb-header-lean, which will be placed in the header bar or
-  the sidebar depending on state.
+The outlet for links and buttons inside sbb-header-lean, which will be placed in the header bar or
+the sidebar depending on state.
 -->
 <ng-template cdkPortal #menuActions="cdkPortal">
   <ng-content select="a,button"></ng-content>
