--- a/src/angular/tooltip/tooltip.html
+++ b/src/angular/tooltip/tooltip.html
@@ -10,18 +10,18 @@
     [class.sbb-tooltip-has-close-button]="_triggeredByClick"
   >
     <div class="sbb-tooltip-content">
-      <ng-container *ngIf="_templateRef as templateRef; else stringMessage">
-        <ng-container *ngTemplateOutlet="templateRef"></ng-container>
-      </ng-container>
-      <ng-template #stringMessage>{{ message }}</ng-template>
+      @if (_templateRef; as templateRef) {
+      <ng-container *ngTemplateOutlet="templateRef"></ng-container>
+      } @else { {{ message }} }
     </div>
+    @if (_triggeredByClick) {
     <button
-      *ngIf="_triggeredByClick"
       type="button"
       class="sbb-tooltip-icon sbb-tooltip-close-button sbb-icon-fit sbb-button-reset-frameless"
       (click)="hide(0)"
     >
       <sbb-icon svgIcon="cross-small"></sbb-icon>
     </button>
+    }
   </div>
 </div>
