--- a/src/angular/toggle/toggle-option.html
+++ b/src/angular/toggle/toggle-option.html
@@ -18,30 +18,32 @@
     (click)="_onInputClick($event)"
   />
   <span class="sbb-toggle-option-button-label-wrapper">
-    <span
-      *ngIf="_hasIcon()"
-      [ngSwitch]="!!_icon"
-      role="presentation"
-      class="sbb-toggle-option-button-icon sbb-icon-scaled"
-    >
-      <ng-content *ngSwitchCase="true" select="sbb-toggle-icon"></ng-content>
-      <span *ngSwitchCase="false">
+    @if (_hasIcon()) {
+    <span role="presentation" class="sbb-toggle-option-button-icon sbb-icon-scaled">
+      @switch (!!_icon) { @case (true) {
+      <ng-content select="sbb-toggle-icon"></ng-content>
+      } @default {
+      <span>
         <sbb-icon [svgIcon]="svgIcon"></sbb-icon>
       </span>
+      } }
     </span>
-    <span class="sbb-toggle-option-button-label" [ngSwitch]="!!_label">
-      <ng-container *ngSwitchCase="false">{{ label }}</ng-container>
-      <ng-content select="sbb-toggle-label" *ngSwitchCase="true"></ng-content>
+    }
+    <span class="sbb-toggle-option-button-label">
+      @switch (!!_label) { @case (true) {
+      <ng-content select="sbb-toggle-label"></ng-content>
+      } @default {
+      <ng-container>{{ label }}</ng-container>
+      } }
     </span>
-    <span
-      *ngIf="subtitle || _subtitle"
-      class="sbb-toggle-option-button-subtitle"
-      [ngSwitch]="!!_subtitle"
-    >
+    @if (subtitle || _subtitle) {
+    <span class="sbb-toggle-option-button-subtitle">
       <span class="cdk-visually-hidden">&nbsp;</span>
-      <ng-container *ngSwitchCase="false">{{ subtitle }}</ng-container>
-      <ng-content select="sbb-toggle-subtitle" *ngSwitchCase="true"></ng-content>
+      @switch (!!_subtitle) { @case (true) {
+      <ng-content select="sbb-toggle-subtitle"></ng-content>
+      } @default { {{ subtitle }} } }
     </span>
+    }
   </span>
 </label>
 
