--- a/src/angular/toggle/toggle.html
+++ b/src/angular/toggle/toggle.html
@@ -7,7 +7,10 @@
   <div
     class="sbb-toggle-option-content-wrapper sbb-scrollbar"
     #toggleOptionContentWrapper
-    [@translateHeight]="{ value: _heightAnimationState, params: { currentHeight: _currentOptionContentWrapperHeight }}"
+    [@translateHeight]="{
+        value: _heightAnimationState,
+        params: { currentHeight: _currentOptionContentWrapperHeight }
+      }"
     (@translateHeight.done)="_onHeightAnimationDone($event)"
   >
     <ng-template [cdkPortalOutlet]="selected?._details ? selected?._content : null"></ng-template>
