--- a/src/angular/processflow/processflow.html
+++ b/src/angular/processflow/processflow.html
@@ -11,7 +11,7 @@
     [attr.aria-controls]="_getStepContentId(i)"
     [attr.aria-selected]="selectedIndex == i"
     [attr.aria-label]="step.ariaLabel || null"
-    [attr.aria-labelledby]="(!step.ariaLabel && step.ariaLabelledby) ? step.ariaLabelledby : null"
+    [attr.aria-labelledby]="!step.ariaLabel && step.ariaLabelledby ? step.ariaLabelledby : null"
     [index]="i"
     [state]="_getIndicatorType(i, step.state)"
     [label]="step.stepLabel || step.label"
