--- a/src/angular/tabs/tab-group.html
+++ b/src/angular/tabs/tab-group.html
@@ -18,7 +18,7 @@
     [attr.aria-controls]="_getTabContentId(i)"
     [attr.aria-selected]="selectedIndex == i"
     [attr.aria-label]="tab.ariaLabel || null"
-    [attr.aria-labelledby]="(!tab.ariaLabel && tab.ariaLabelledby) ? tab.ariaLabelledby : null"
+    [attr.aria-labelledby]="!tab.ariaLabel && tab.ariaLabelledby ? tab.ariaLabelledby : null"
     [class.sbb-tab-label-active]="selectedIndex == i"
     [ngClass]="tab.labelClass"
     [disabled]="tab.disabled"
@@ -29,7 +29,7 @@
       <!-- If there is a label template, use it. -->
       @if (tab.templateLabel) {
       <ng-template [cdkPortalOutlet]="tab.templateLabel"></ng-template>
-      } @else { {{tab.textLabel}} }
+      } @else { {{ tab.textLabel }} }
       <!-- If there is not a label template, fall back to the text label. -->
     </div>
   </div>
